<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_working_hours"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/nav_working_hours" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/nav_system">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_login"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
